--- a/merp/Resources/layout/SignIn.axml
+++ b/merp/Resources/layout/SignIn.axml
@@ -77,7 +77,7 @@
             android:layout_marginTop="10dp"
             android:background="#307FC1"
             android:text="IMPORT"
-            android:textColor="@android:color/white"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            android:textColor="@android:color/white" />
     </LinearLayout>
 </RelativeLayout>
