--- a/merp/Resources/layout-large-port/Entry.axml
+++ b/merp/Resources/layout-large-port/Entry.axml
@@ -165,8 +165,7 @@
                     android:textSize="24sp"
                     android:textColor="#ff140000"
                     android:paddingLeft="5dp"
-                    android:background="@android:drawable/edit_text"
-                    android:editable="false" />
+                    android:background="@android:drawable/edit_text" />
                 <EditText
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:inputType="numberDecimal|numberSigned"
