--- a/merp/Resources/layout-large-port/InvDtlView.axml
+++ b/merp/Resources/layout-large-port/InvDtlView.axml
@@ -28,7 +28,7 @@
                 android:drawableLeft="@drawable/add"
                 android:width="120dp"
                 android:id="@+id/butnewItem"
-                android:text="ADD" />
+                android:text="NEW" />
         </TableRow>
     </TableLayout>
     <ListView
