--- a/merp/Resources/layout/CreateCNote.axml
+++ b/merp/Resources/layout/CreateCNote.axml
@@ -161,7 +161,8 @@
                 android:id="@+id/newinv_cancel"
                 android:drawableLeft="@drawable/left"
                 android:width="130dp"
-                android:text="CANCEL" />
+                android:text="BACK"
+                android:hint="Cancel and back" />
         </TableRow>
         <TableRow
             android:id="@+id/tableRow2">
