--- a/merp/Resources/layout-large-port/CreateInvoice.axml
+++ b/merp/Resources/layout-large-port/CreateInvoice.axml
@@ -143,7 +143,8 @@
                 android:id="@+id/newinv_cancel"
                 android:drawableLeft="@drawable/left"
                 android:width="120dp"
-                android:text="BACK" />
+                android:text="BACK"
+                android:hint="Cancel and back" />
         </TableRow>
         <TableRow
             android:id="@+id/tableRow2">
