auto delete the empty item transaction - update inv status if print from cn -the item spinner at entry page. the size is getting smaller after Add.

--- a/merp/Resources/layout-large-port/Download.axml
+++ b/merp/Resources/layout-large-port/Download.axml
@@ -50,7 +50,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:height="80dp"
             android:textSize="24sp"
-            android:drawableLeft="@drawable/left"
+            android:drawableLeft="@drawable/home"
             android:id="@+id/butMain" />
     </LinearLayout>
 </ScrollView>
