--- a/merp/Resources/layout/Download.axml
+++ b/merp/Resources/layout/Download.axml
@@ -44,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:drawableLeft="@drawable/left"
+            android:drawableLeft="@drawable/home"
             android:height="53dp"
             android:id="@+id/butMain" />
     </LinearLayout>
