--- a/merp/Resources/layout/SimpleSpinnerDropDownItemEx.axml
+++ b/merp/Resources/layout/SimpleSpinnerDropDownItemEx.axml
@@ -2,14 +2,15 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:padding="6dp"
+    android:padding="8dp"
     android:textSize="18sp"
     android:typeface="serif"
     android:singleLine="true"
     android:layout_marginLeft="2dip"
     android:layout_marginRight="5dip"
-    android:ellipsize="marquee"
     android:textColor="@android:color/white"
+    android:background="@drawable/bluethem_btn_default_holo_light"
+    android:ellipsize="marquee"
     android:paddingRight="10dp"
     android:paddingLeft="10dp"
     android:paddingTop="6dp"
