--- a/merp/Resources/layout-large-port/Translist.axml
+++ b/merp/Resources/layout-large-port/Translist.axml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content">
         <Button
             android:text="INVOICE LIST"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
@@ -18,6 +19,7 @@
             android:id="@+id/butInvlist" />
         <Button
             android:text="CREDIT NOTE LIST"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
@@ -27,6 +29,7 @@
             android:id="@+id/butCNlist" />
         <Button
             android:text="INVOICE SUMMARY"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:height="80dp"
@@ -36,6 +39,7 @@
             android:id="@+id/butInvsumm" />
         <Button
             android:text="MAIN MENU"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
